@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -153,7 +153,7 @@ public class TestDumpOnCrash {
 
             List<RecordedEvent> events = RecordingFile.readAllEvents(file);
             Asserts.assertFalse(events.isEmpty(), "No event found");
-            System.out.printf("Found event %s%n", events.get(0).getEventType().getName());
+            System.out.printf("Found event %s%n", events.getFirst().getEventType().getName());
 
             Files.delete(file);
         } else {
